added pull to refresh patient List and referrals - calls respective RESTFULL API and added load allergies list by patient ID via API. Removed obsolete code/files.

--- a/CarePointe/communication.storyboard
+++ b/CarePointe/communication.storyboard
@@ -328,7 +328,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jIl-a5-ccB">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CarePonite | TeleConnect" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k6e-LF-cZ6">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CarePointe | TeleConnect" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k6e-LF-cZ6">
                                         <rect key="frame" x="60" y="23.5" width="265" height="23"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="265" id="UOg-D1-nLt"/>
