EMR XML Parser, Delete Medication, Constants to toggle sandbox API URLs

--- a/CarePointe/AddEditRx.storyboard
+++ b/CarePointe/AddEditRx.storyboard
@@ -964,6 +964,6 @@
         <image name="reload.png" width="64" height="64"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="zXv-vk-7S5"/>
+        <segue reference="Pht-TO-o0E"/>
     </inferredMetricsTieBreakers>
 </document>
